errors.txt
    Checking kwavers v2.14.0 (D:\kwavers)
error[E0432]: unresolved imports `crate::physics::acoustics::therapy::lithotripsy::bioeffects`, `crate::physics::acoustics::therapy::lithotripsy::cavitation_cloud`, `crate::physics::acoustics::therapy::lithotripsy::shock_wave`
  --> src\clinical\therapy\lithotripsy.rs:30:5
   |
30 |     bioeffects::{BioeffectsModel, BioeffectsParameters, SafetyAssessment},
   |     ^^^^^^^^^^ could not find `bioeffects` in `lithotripsy`
31 |     cavitation_cloud::{CavitationCloudDynamics, CloudParameters},
   |     ^^^^^^^^^^^^^^^^ could not find `cavitation_cloud` in `lithotripsy`
32 |     shock_wave::{ShockWaveGenerator, ShockWaveParameters, ShockWavePropagation},
   |     ^^^^^^^^^^ could not find `shock_wave` in `lithotripsy`

error[E0432]: unresolved import `bioeffects`
  --> src\physics\acoustics\therapy\lithotripsy\mod.rs:32:9
   |
32 | pub use bioeffects::{BioeffectsModel, SafetyAssessment, TissueDamageAssessment};
   |         ^^^^^^^^^^ use of unresolved module or unlinked crate `bioeffects`
   |
help: to make use of source file src\physics\acoustics\therapy\lithotripsy\bioeffects.rs, use `mod bioeffects` in this file to declare the module
  --> src\lib.rs:35:1
   |
35 + mod bioeffects;
   |

error[E0432]: unresolved import `cavitation_cloud`
  --> src\physics\acoustics\therapy\lithotripsy\mod.rs:33:9
   |
33 | pub use cavitation_cloud::{CavitationCloudDynamics, CloudParameters};
   |         ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `cavitation_cloud`
   |
help: to make use of source file src\physics\acoustics\therapy\lithotripsy\cavitation_cloud.rs, use `mod cavitation_cloud` in this file to declare the module
  --> src\lib.rs:35:1
   |
35 + mod cavitation_cloud;
   |

error[E0432]: unresolved import `shock_wave`
  --> src\physics\acoustics\therapy\lithotripsy\mod.rs:34:9
   |
34 | pub use shock_wave::{ShockWaveGenerator, ShockWavePropagation};
   |         ^^^^^^^^^^ use of unresolved module or unlinked crate `shock_wave`
   |
help: to make use of source file src\physics\acoustics\therapy\lithotripsy\shock_wave.rs, use `mod shock_wave` in this file to declare the module
  --> src\lib.rs:35:1
   |
35 + mod shock_wave;
   |

warning: unused import: `crate::domain::field::indices`
  --> src\domain\field\mapping.rs:7:5
   |
 7 | use crate::domain::field::indices;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> src\lib.rs:13:5
   |
13 |     unused_imports,
   |     ^^^^^^^^^^^^^^

warning: unused import: `std::fmt`
 --> src\domain\field\mapping.rs:8:5
  |
8 | use std::fmt;
  |     ^^^^^^^^

warning: unused import: `InterfaceTypeParameters`
 --> src\domain\medium\validation_simulation.rs:5:21
  |
5 | use super::config::{InterfaceTypeParameters, LayerParameters, MediumParameters, MediumType};
  |                     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::fmt::Debug`
  --> src\domain\signal\mod.rs:18:5
   |
18 | use std::fmt::Debug;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::field::indices`
 --> src\physics\plugin\acoustic_wave_plugin.rs:8:5
  |
8 | use crate::domain::field::indices;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::field::indices`
 --> src\physics\plugin\manager.rs:9:5
  |
9 | use crate::domain::field::indices;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::field::indices`
   --> src\physics\plugin\transducer_field.rs:394:13
    |
394 |         use crate::domain::field::indices;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::field::indices`
  --> src\physics\plugin\mod.rs:19:5
   |
19 | use crate::domain::field::indices;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::grid::config::GridParameters`
 --> src\simulation\builder.rs:9:5
  |
9 | use crate::domain::grid::config::GridParameters;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::simulation::core::CoreSimulation`
  --> src\simulation\setup.rs:12:5
   |
12 | use crate::simulation::core::CoreSimulation;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused doc comment
  --> src\solver\feature.rs:35:1
   |
35 | /// Feature set using bitflags for efficient storage and operations
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rustdoc does not generate documentation for macro invocations
   |
   = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion
   = note: `#[warn(unused_doc_comments)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::solver::interface::Solver`
  --> src\solver\forward\hybrid\solver.rs:16:5
   |
16 | use crate::solver::interface::Solver;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `ConfigError` and `KwaversError`
 --> src\solver\forward\pstd\config.rs:7:26
  |
7 | use crate::core::error::{ConfigError, KwaversError};
  |                          ^^^^^^^^^^^  ^^^^^^^^^^^^

warning: unused import: `crate::domain::grid::Grid`
 --> src\solver\forward\pstd\config.rs:8:5
  |
8 | use crate::domain::grid::Grid;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::grid::Grid`
  --> src\solver\inverse\reconstruction\photoacoustic\mod.rs:33:5
   |
33 | use crate::domain::grid::Grid;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::medium::Medium`
  --> src\solver\inverse\reconstruction\photoacoustic\mod.rs:34:5
   |
34 | use crate::domain::medium::Medium;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `KwaversError`
 --> src\solver\multiphysics\coupled_solver.rs:5:26
  |
5 | use crate::core::error::{KwaversError, KwaversResult};
  |                          ^^^^^^^^^^^^

warning: unused import: `crate::solver::interface::Solver`
 --> src\solver\multiphysics\coupled_solver.rs:9:5
  |
9 | use crate::solver::interface::Solver;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::solver::interface::Solver`
 --> src\solver\utilities\validation\numerical_accuracy.rs:9:5
  |
9 | use crate::solver::interface::Solver;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ndarray::Array3`
  --> src\solver\utilities\validation\numerical_accuracy.rs:10:5
   |
10 | use ndarray::Array3;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::grid::Grid`
 --> src\solver\validation\numerical_methods.rs:9:5
  |
9 | use crate::domain::grid::Grid;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::solver::amr::AMRSolver`
  --> src\solver\validation\numerical_methods.rs:10:5
   |
10 | use crate::solver::amr::AMRSolver;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::solver::pstd::PSTDSolver`
  --> src\solver\validation\numerical_methods.rs:11:5
   |
11 | use crate::solver::pstd::PSTDSolver;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Array3`
  --> src\solver\validation\numerical_methods.rs:12:23
   |
12 | use ndarray::{Array1, Array3};
   |                       ^^^^^^

warning: unused import: `std::f64::consts::PI`
  --> src\solver\validation\numerical_methods.rs:13:5
   |
13 | use std::f64::consts::PI;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `numerical_methods::*`
 --> src\solver\validation\mod.rs:4:9
  |
4 | pub use numerical_methods::*;
  |         ^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `kwavers` (lib) generated 26 warnings
error: could not compile `kwavers` (lib) due to 4 previous errors; 26 warnings emitted
